Added Email Sender app Completed Cryptography app

--- a/.gitignore
+++ b/.gitignore
@@ -17,4 +17,6 @@ ipython_config.py
 #   git rm -r .ipynb_checkpoints/
 # keys
 *.key
+# bat 
+*.bat
 # End of https://www.toptal.com/developers/gitignore/api/jupyternotebooks
